--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,16 +9,17 @@
 
 :root {
   box-sizing: border-box;
+
   --gray-color: #e4e4e4;
-  --gray-two: #cccccc;
-  --gray-three: #333333;
-  --gray-four: #aaaaaa;
+  --gray-two: #ccc;
+  --gray-three: #333;
+  --gray-four: #aaa;
   --black-one: #131313;
   --black-two: #42424210;
-  --transparent-white: #ffffff00;
+  --transparent-white: #fff0;
   --orange-color: #e43500;
-  --orange-two: #ff4422;
-  --orange-three: rgba(255,68,34,.08);
+  --orange-two: #f42;
+  --orange-three: rgba(255, 68, 34, 0.08);
   --orange-four: #fffaf8;
   --ubuntu-font: 'Ubuntu', sans-serif;
 }
@@ -40,13 +41,13 @@ img {
 /* reset CSS "end" */
 
 /* mobile screen style */
-.header-page{
+.header-page {
   display: grid;
   grid-template-columns: 6.5rem 1fr;
   position: sticky;
   top: 0;
   left: 0;
-  box-shadow: 0 0 32px rgba(0,0,0,.15);
+  box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
   z-index: 10;
   right: 0;
   background: white;
@@ -73,9 +74,6 @@ img {
   display: flex;
   list-style: none;
   align-items: center;
-}
-
-.bottom-navbar-list {
   border-left: 1px solid var(--gray-two);
 }
 
@@ -118,8 +116,9 @@ img {
 }
 
 .firts-article-firts-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-1-firts-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-1-firts-section.jpg);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -128,23 +127,25 @@ img {
 }
 
 .second-article-firts-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-2-firts-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-2-firts-section.jpg);
   background-size: cover;
   background-position: 50%;
   cursor: pointer;
 }
 
 .third-article-firts-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-3-firts-section.webp);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-3-firts-section.webp);
   background-size: cover;
   background-position: 50%;
   cursor: pointer;
 }
 
 .transition-hover {
-  transition: .4s ease;
+  transition: 0.4s ease;
   opacity: 1;
   will-change: opacity;
 }
@@ -170,7 +171,7 @@ img {
 }
 
 .title-firts-article-firts-section:hover {
-  box-shadow: inset 0 -1px 0 hsla(0,0%,100%,.3);
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.3);
 }
 
 .padding-1 {
@@ -181,13 +182,13 @@ img {
   color: var(--gray-two);
 }
 
+.subtitle-firts-article-firts-section-a {
+  color: var(--gray-two);
+}
+
 .subtitle-firts-article-firts-section-a:hover {
   color: white;
   text-decoration: underline;
-}
-
-.subtitle-firts-article-firts-section-a {
-  color: var(--gray-two);
 }
 
 .text-decoration-none {
@@ -348,7 +349,7 @@ img {
 }
 
 .title-info-firts-article-second-section:hover {
-  box-shadow: inset 0 -1px 0 rgba(255,68,34,.25);
+  box-shadow: inset 0 -1px 0 rgba(255, 68, 34, 0.25);
   color: var(--orange-color);
 }
 
@@ -384,6 +385,7 @@ img {
 
 .fourth-article-third-section {
   display: none;
+  position: relative;
 }
 
 .title-third-section {
@@ -427,10 +429,6 @@ img {
 }
 
 .third-article-third-section {
-  position: relative;
-}
-
-.fourth-article-third-section {
   position: relative;
 }
 
@@ -534,17 +532,17 @@ img {
 
 .footer-firts-article-third-section {
   background-color: var(--orange-four);
-  border-top: 1px solid rgba(255,68,34,.25);
+  border-top: 1px solid rgba(255, 68, 34, 0.25);
   padding: 1rem;
 }
 
 .text-footer-firts-article-third-section {
   text-decoration: none;
-  color: #555555;
+  color: #555;
 }
 
 .another-text-footer-firts-article-third-section {
-  color: #aaaaaa;
+  color: #aaa;
 }
 
 .fourth-section {
@@ -556,8 +554,9 @@ img {
 }
 
 .text-pic-1-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-1-fourth-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-1-fourth-section.jpg);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -567,8 +566,9 @@ img {
 }
 
 .text-pic-2-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-2-fourth-section.webp);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-2-fourth-section.webp);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -578,8 +578,9 @@ img {
 }
 
 .text-pic-3-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-3-fourth-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-3-fourth-section.jpg);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -589,8 +590,9 @@ img {
 }
 
 .text-pic-4-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-4-fourth-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-4-fourth-section.jpg);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -600,8 +602,9 @@ img {
 }
 
 .text-pic-5-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-5-fourth-section.webp);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-5-fourth-section.webp);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -611,8 +614,9 @@ img {
 }
 
 .text-pic-6-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-6-fourth-section.webp);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-6-fourth-section.webp);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -622,8 +626,9 @@ img {
 }
 
 .text-pic-7-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-7-fourth-section.webp);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-7-fourth-section.webp);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -633,8 +638,9 @@ img {
 }
 
 .text-pic-8-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-8-fourth-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-8-fourth-section.jpg);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -644,8 +650,9 @@ img {
 }
 
 .text-pic-9-firts-article-fourth-section {
-  background-image: linear-gradient(to bottom, var(--black-two), var(--black-one)),
-  url(assets/pic-9-fourth-section.jpg);
+  background-image:
+    linear-gradient(to bottom, var(--black-two), var(--black-one)),
+    url(assets/pic-9-fourth-section.jpg);
   background-size: cover;
   background-position: 50%;
   flex-direction: column;
@@ -667,7 +674,7 @@ img {
 
 .subtitle-firts-article-fourth-section {
   display: flex;
-  background-color: rgba(255,68,34,.06);
+  background-color: rgba(255, 68, 34, 0.06);
   padding: 10px 14px 0;
 }
 
@@ -776,7 +783,7 @@ img {
 .text-item-text-firts-article-fourth-section {
   padding-left: 8px;
   font-size: 13px;
-  color: #555555;
+  color: #555;
 }
 
 .text-item-text-firts-article-fourth-section:hover {
@@ -786,7 +793,7 @@ img {
 .item-text-firts-article-fourth-section {
   padding: 6px 0;
   cursor: pointer;
-  border-bottom: 2px solid #eeeeee;
+  border-bottom: 2px solid #eee;
 }
 
 .items-text-firts-article-fourth-section {
@@ -934,7 +941,7 @@ img {
 .text-2-info-firts-article-fifth-section {
   position: relative;
   top: 0.3rem;
-  color: #555555;
+  color: #555;
   font-size: 14px;
 }
 
@@ -952,13 +959,13 @@ img {
 }
 
 .icon-firts-part-footer-page {
-  background-color: #333333;
+  background-color: #333;
   border-radius: 50%;
-  border: 1px solid #444444;
+  border: 1px solid #444;
   height: 40px;
   width: 40px;
   margin: 0 0.25rem;
-  color: #dddddd;
+  color: #ddd;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -977,7 +984,7 @@ img {
   font-size: 12px;
   line-height: 1.5;
   text-transform: uppercase;
-  color: #bbbbbb;
+  color: #bbb;
   text-decoration: none;
   padding: 0 0.4rem;
 }
@@ -988,7 +995,7 @@ img {
 
 .third-part-footer-page {
   padding-bottom: 3rem;
-  color: #bbbbbb;
+  color: #bbb;
   font-size: 12px;
   display: flex;
   flex-direction: column;
@@ -1050,32 +1057,29 @@ img {
   .top-navbar {
     display: flex;
     justify-content: space-between;
+    grid-area: top-navbar;
+    background-color: black;
   }
 
   .left-items-bottom-navbar {
     display: block;
   }
 
-  .header-page{
+  .header-page {
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
-    "logo top-navbar"
-    "logo bottom-navbar";
+      "logo top-navbar"
+      "logo bottom-navbar";
     height: 80px;
   }
 
-  .logo-image{
+  .logo-image {
     padding-top: 1.8rem;
     padding-bottom: 1.8rem;
   }
 
   .logo-navbar {
     grid-area: logo;
-  }
-
-  .top-navbar {
-    grid-area: top-navbar;
-    background-color: black;
   }
 
   .bottom-navbar {
@@ -1102,7 +1106,7 @@ img {
   }
 
   .link-item-top-navbar {
-    color: #aaaaaa;
+    color: #aaa;
     text-decoration: none;
   }
 
@@ -1130,7 +1134,7 @@ img {
   }
 
   .link-item-bottom-navbar {
-    color: #aaaaaa;
+    color: #aaa;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 14px;
@@ -1149,8 +1153,8 @@ img {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
-    "firts-article second-article"
-    "firts-article third-article";
+      "firts-article second-article"
+      "firts-article third-article";
     height: 60vh;
   }
 
@@ -1170,10 +1174,10 @@ img {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 3fr 3fr 3fr;
     grid-template-areas:
-    "title-second-section title-second-section title-second-section"
-    "firts-article-second-section second-article-second-section third-article-second-section"
-    "fourth-article-second-section fifth-article-second-section sixth-article-second-section"
-    "seventh-article-second-section eighth-article-second-section .";
+      "title-second-section title-second-section title-second-section"
+      "firts-article-second-section second-article-second-section third-article-second-section"
+      "fourth-article-second-section fifth-article-second-section sixth-article-second-section"
+      "seventh-article-second-section eighth-article-second-section .";
   }
 
   .title-second-section {
@@ -1272,8 +1276,8 @@ img {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr auto;
     grid-template-areas:
-    "title-third-section title-third-section title-third-section"
-    "firts-article-third-section second-article-third-section third-article-third-section";
+      "title-third-section title-third-section title-third-section"
+      "firts-article-third-section second-article-third-section third-article-third-section";
   }
 
   .title-third-section {
@@ -1311,14 +1315,14 @@ img {
   }
 
   .fourth-section {
-    grid-template-columns:repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, auto);
     grid-template-areas:
-    "firts-article-fourth-section second-article-fourth-section"
-    "third-article-fourth-section fourth-article-fourth-section"
-    "fifth-article-fourth-section sixth-article-fourth-section"
-    "seventh-article-fourth-section eighth-article-fourth-section"
-    "nineth-article-fourth-section .";
+      "firts-article-fourth-section second-article-fourth-section"
+      "third-article-fourth-section fourth-article-fourth-section"
+      "fifth-article-fourth-section sixth-article-fourth-section"
+      "seventh-article-fourth-section eighth-article-fourth-section"
+      "nineth-article-fourth-section .";
   }
 
   .firts-article-fourth-section {
@@ -1361,10 +1365,10 @@ img {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto 3fr 3fr 3fr;
     grid-template-areas:
-    "title-fifth-section title-fifth-section title-fifth-section"
-    "firts-article-fifth-section second-article-fifth-section third-article-fifth-section"
-    "fourth-article-fifth-section fifth-article-fifth-section sixth-article-fifth-section"
-    "seventh-article-fifth-section eighth-article-fifth-section .";
+      "title-fifth-section title-fifth-section title-fifth-section"
+      "firts-article-fifth-section second-article-fifth-section third-article-fifth-section"
+      "fourth-article-fifth-section fifth-article-fifth-section sixth-article-fifth-section"
+      "seventh-article-fifth-section eighth-article-fifth-section .";
   }
 
   .title-fifth-section {
@@ -1518,21 +1522,19 @@ img {
   .cover-date {
     display: none;
   }
-
 }
 
 /* desktop screen style */
 @media screen and (min-width: 1024px) {
-
   .logo-navbar {
     display: none;
   }
 
-  .header-page{
+  .header-page {
     grid-template-columns: 1fr;
     grid-template-areas:
-    "top-navbar"
-    "bottom-navbar";
+      "top-navbar"
+      "bottom-navbar";
   }
 
   .firts-section {
@@ -1586,9 +1588,9 @@ img {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 3fr 3fr;
     grid-template-areas:
-    "title-second-section title-second-section title-second-section title-second-section"
-    "firts-article-second-section second-article-second-section third-article-second-section fourth-article-second-section"
-    "fifth-article-second-section sixth-article-second-section seventh-article-second-section eighth-article-second-section";
+      "title-second-section title-second-section title-second-section title-second-section"
+      "firts-article-second-section second-article-second-section third-article-second-section fourth-article-second-section"
+      "fifth-article-second-section sixth-article-second-section seventh-article-second-section eighth-article-second-section";
     max-width: 1152px;
     margin: auto;
   }
@@ -1597,8 +1599,8 @@ img {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr auto;
     grid-template-areas:
-    "title-third-section title-third-section title-third-section title-third-section"
-    "firts-article-third-section second-article-third-section third-article-third-section fourth-article-third-section";
+      "title-third-section title-third-section title-third-section title-third-section"
+      "firts-article-third-section second-article-third-section third-article-third-section fourth-article-third-section";
     max-width: 1152px;
     margin: auto;
   }
@@ -1620,9 +1622,9 @@ img {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     grid-template-areas:
-    "firts-article-fourth-section second-article-fourth-section third-article-fourth-section"
-    "fourth-article-fourth-section fifth-article-fourth-section sixth-article-fourth-section"
-    "seventh-article-fourth-section eighth-article-fourth-section nineth-article-fourth-section";
+      "firts-article-fourth-section second-article-fourth-section third-article-fourth-section"
+      "fourth-article-fourth-section fifth-article-fourth-section sixth-article-fourth-section"
+      "seventh-article-fourth-section eighth-article-fourth-section nineth-article-fourth-section";
     max-width: 1152px;
     margin: auto;
   }
@@ -1650,7 +1652,7 @@ img {
   .text-pic-6-firts-article-fourth-section {
     height: 276px;
   }
-  
+
   .text-pic-7-firts-article-fourth-section {
     height: 276px;
   }
@@ -1667,11 +1669,10 @@ img {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto 3fr 3fr;
     grid-template-areas:
-    "title-fifth-section title-fifth-section title-fifth-section title-fifth-section"
-    "firts-article-fifth-section second-article-fifth-section third-article-fifth-section fourth-article-fifth-section"
-    "fifth-article-fifth-section sixth-article-fifth-section seventh-article-fifth-section eighth-article-fifth-section";
+      "title-fifth-section title-fifth-section title-fifth-section title-fifth-section"
+      "firts-article-fifth-section second-article-fifth-section third-article-fifth-section fourth-article-fifth-section"
+      "fifth-article-fifth-section sixth-article-fifth-section seventh-article-fifth-section eighth-article-fifth-section";
     max-width: 1152px;
     margin: auto;
   }
-
 }
