--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1578,6 +1578,9 @@ img {
 
   .title-firts-1-article-firts-section {
     font-size: 2.5rem;
+    text-decoration: none;
+    color: white;
+    font-family: var(--ubuntu-font);
   }
 
   .title-second-article-firts-section {
