resize Picture Desktop version

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1678,4 +1678,36 @@ img {
     max-width: 1152px;
     margin: auto;
   }
+
+  .picture-1-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-2-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-3-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-4-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-5-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-6-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-7-article-fifth-section {
+    height: 201.15px;
+  }
+
+  .picture-8-article-fifth-section {
+    height: 201.15px;
+  }
 }
