--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1052,6 +1052,13 @@ img {
   display: none;
 }
 
+.title-firts-1-article-firts-section {
+  font-size: 2.5rem;
+  text-decoration: none;
+  color: white;
+  font-family: var(--ubuntu-font);
+}
+
 /* tablet screen style */
 @media screen and (min-width: 768px) {
   .top-navbar {
@@ -1522,6 +1529,13 @@ img {
   .cover-date {
     display: none;
   }
+}
+
+.title-firts-1-article-firts-section {
+  font-size: 2.5rem;
+  text-decoration: none;
+  color: white;
+  font-family: var(--ubuntu-font);
 }
 
 /* desktop screen style */
